Внесла правки по ревью к "Основное задание: начинаем базовую стилизацию личного проекта"

--- a/catalog.html
+++ b/catalog.html
@@ -42,14 +42,14 @@
         </ul>
         <ul class="user-navigation">
           <li class="user-navigation__item search">
-            <a class="user-navigation__link search__link" href="#"></a>
+            <a class="user-navigation__link icon-before search__link" href="#"></a>
             <form class="search__form" action="https://echo.htmlacademy.ru" method="post">
               <label class="visually-hidden" for="search">Поиск по сайту</label>
               <input class="search__input" id="search" type="search" name="search" placeholder="Что ищем?">
             </form>
           </li>
           <li class="user-navigation__item login">
-            <a class="user-navigation__link login__link" href="">Вход</a>
+            <a class="user-navigation__link icon-before login__link" href="">Вход</a>
             <section class="login__modal-window">
               <h2 class="visually-hidden">Личный кабинет</h2>
               <form class="login__form" action="https://echo.htmlacademy.ru" method="post">
@@ -69,7 +69,7 @@
           </li>
           <li class="user-navigation__item basket">
             <!-- a question -->
-            <a class="user-navigation__link basket__link--full" href="">2 товара</a>
+            <a class="user-navigation__link icon-before basket__link--full" href="">2 товара</a>
             <section class="basket__modal-window">
               <h2 class="visually-hidden">Содержимое корзины</h2>
               <table class="basket-modal-window__table">
@@ -285,7 +285,7 @@
         </ul>
         <ul class="catalog__pagination pagination">
           <li>
-            <a class="pagination__item pagination__item--current  link-active">1</a>
+            <a class="pagination__item pagination__item--current" href="#">1</a>
           </li>
           <li>
             <a class="pagination__item" href="#">2</a>
@@ -308,21 +308,21 @@
     <footer class="main-footer">
       <ul class="main-footer__social social">
         <li class="social__item">
-          <a class="social__link social__link--Twitter" href="#" aria-label="Ссылка на Twitter"></a>
+          <a class="icon-before social__link social__link--Twitter" href="#" aria-label="Ссылка на Twitter"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--Instagram" href="#" aria-label="Ссылка на Instagram"></a>
+          <a class="icon-before social__link social__link--Instagram" href="#" aria-label="Ссылка на Instagram"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--Facebook" href="#" aria-label="Ссылка на страницу Facebook"></a>
+          <a class="icon-before social__link social__link--Facebook" href="#" aria-label="Ссылка на страницу Facebook"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--Вконтакте" href="#" aria-label="Ссылка на группу Вконтакте"></a>
+          <a class="icon-before social__link social__link--Вконтакте" href="#" aria-label="Ссылка на группу Вконтакте"></a>
         </li>
       </ul>
       <ul class="main-footer__additional additional-info">
         <li class="additional-info__item additional-info__item--active">
-          <a class="additional-info__link additional-info__link--heart" href="#">Для поставщиков</a>
+          <a class="icon-before additional-info__link additional-info__link--heart" href="#">Для поставщиков</a>
         </li>
         <li class="additional-info__item">
           <a class="additional-info__link"  href="#">О производстве</a>
@@ -334,7 +334,7 @@
           <a class="additional-info__link"  href="#">Экологические стандарты</a>
         </li>
       </ul>
-        <a class="main-footer__copyright copyright"  href="https://htmlacademy.ru/intensive/htmlcss">Сделано в <span>HTML Academy</span>  &#169; 2019</a>
+        <a class="icon-before main-footer__copyright copyright"  href="https://htmlacademy.ru/intensive/htmlcss">Сделано в <span>HTML Academy</span>  &#169; 2019</a>
     </footer>
   </body>
 </html>
