--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         </ul>
         <ul class="user-navigation">
           <li class="user-navigation__item search">
-            <a class="user-navigation__link search__link" href="#"></a>
+            <a class="user-navigation__link icon-before search__link" href="#"></a>
             <form class="search__form" action="https://echo.htmlacademy.ru" method="post">
               <label class="visually-hidden" for="search">Поиск по сайту</label>
               <input class="search__input" id="search" type="search" name="search" placeholder="Что ищем?">
             </form>
           </li>
           <li class="user-navigation__item login">
-            <a class="user-navigation__link login__link" href="">Вход</a>
+            <a class="user-navigation__link icon-before login__link" href="">Вход</a>
             <section class="login__modal-window">
               <h2 class="visually-hidden">Личный кабинет</h2>
               <form class="login__form" action="https://echo.htmlacademy.ru" method="post">
@@ -66,7 +66,7 @@
             </section>
           </li>
           <li class="user-navigation__item basket">
-            <a class="user-navigation__link basket__link" href="">Пусто</a>
+            <a class="user-navigation__link icon-before basket__link" href="">Пусто</a>
           </li>
         </ul>
       </nav>
@@ -107,12 +107,12 @@
       </section>
       <section class="page-main__promotions promotions">
         <h2 class="visually-hidden">Промо акции</h2>
-        <div class="promotions__raspberry">
+        <div class="promotions__item promotions__raspberry">
           <p>Малинка даром!</p>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
           <a class="button promotions__button" href="#">Хочу варенье!</a>
         </div>
-        <div class="promotions__chocolate">
+        <div class="promotions__item promotions__chocolate">
           <p>Шоколадки даром!</p>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
           <a class="button promotions__button" href="#">Хочу шоколадки!</a>
@@ -161,13 +161,13 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <h3 class="features__lead">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
         <ul class="features__list">
-          <li class="features__item features__item--ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+          <li class="icon-before features__item features__item--ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
           </li>
-          <li class="features__item features__item--eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+          <li class="icon-before features__item features__item--eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
           </li>
-          <li class="features__item features__item--cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+          <li class="icon-before features__item features__item--cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
           </li>
-          <li class="features__item features__item--thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+          <li class="icon-before features__item features__item--thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
           </li>
         </ul>
       </section>
@@ -204,21 +204,21 @@
       </section>
       <ul class="main-footer__social social">
         <li class="social__item">
-          <a class="social__link social__link--Twitter" href="#" aria-label="Ссылка на Twitter"></a>
+          <a class="icon-before social__link social__link--Twitter" href="#" aria-label="Ссылка на Twitter"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--Instagram" href="#" aria-label="Ссылка на Instagram"></a>
+          <a class="icon-before social__link social__link--Instagram" href="#" aria-label="Ссылка на Instagram"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--Facebook" href="#" aria-label="Ссылка на страницу Facebook"></a>
+          <a class="icon-before social__link social__link--Facebook" href="#" aria-label="Ссылка на страницу Facebook"></a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--Вконтакте" href="#" aria-label="Ссылка на группу Вконтакте"></a>
+          <a class="icon-before social__link social__link--Вконтакте" href="#" aria-label="Ссылка на группу Вконтакте"></a>
         </li>
       </ul>
       <ul class="main-footer__additional additional-info">
         <li class="additional-info__item additional-info__item--active">
-          <a class="additional-info__link additional-info__link--heart" href="#">Для поставщиков</a>
+          <a class="icon-before additional-info__link additional-info__link--heart" href="#">Для поставщиков</a>
         </li>
         <li class="additional-info__item">
           <a class="additional-info__link"  href="#">О производстве</a>
@@ -230,7 +230,7 @@
           <a class="additional-info__link"  href="#">Экологические стандарты</a>
         </li>
       </ul>
-      <a class="main-footer__copyright copyright"  href="https://htmlacademy.ru/intensive/htmlcss">Сделано в <span>HTML Academy</span>  &#169; 2019</a>
+      <a class="icon-before main-footer__copyright copyright"  href="https://htmlacademy.ru/intensive/htmlcss">Сделано в <span>HTML Academy</span>  &#169; 2019</a>
     </footer>
     <section class="feedback">
       <h2>Мы обязательно вам ответим!</h2>
