--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
             <form class="subscription__form" action="https://echo.htmlacademy.ru" method="post">
               <p>
-                <label class="visually-hidden" for="user-email">Электронная почта</label>
-                <input class="subscription__input" id="user-email" type="text" name="email" placeholder="Электронная почта">
+                <label class="visually-hidden" for="subscription-email">Электронная почта</label>
+                <input class="subscription__input" id="subscription-email" type="text" name="email" placeholder="Электронная почта">
               </p>
               <button class="subscription__submit-button button" type="submit">Отправить</button>
             </form>
@@ -199,7 +199,7 @@
       </div>
       <section class="main-footer__map">
         <h2 class="visually-hidden">Контакты</h2>
-        <img src="img/map.jpg" alt="Адрес офлайн магазина: город Санкт-Петербург, улица Большая Конюшенная 19/8">
+        <img src="img/map.jpg" width="1250px" height="430px" alt="Адрес офлайн магазина: город Санкт-Петербург, улица Большая Конюшенная 19/8">
       </section>
       <section class="main-footer__contacts contacts visually-hidden">
         <h3>Адрес главного офиса и офлайн-магазина:</h3>
